modified mlearning, added readings. added TOC to build script, and updated TOC styles. rebuilt html files with TOC

--- a/tmpl/adelphi.html
+++ b/tmpl/adelphi.html
@@ -68,7 +68,8 @@ $if(title)$
 $endif$
 
 $if(toc)$
-<nav id="$idprefix$TOC">
+<nav id="contents">
+<strong>Course Outline</strong>
 $toc$
 </nav>
 $endif$
