updated layout, border around weekly sessions, to make them easier to read

--- a/tmpl/adelphi.html
+++ b/tmpl/adelphi.html
@@ -68,8 +68,8 @@ $if(title)$
 $endif$
 
 $if(toc)$
-<nav id="contents">
-<strong>Course Outline</strong>
+<nav id="TOC">
+<h3>Course Outline</h3>
 $toc$
 </nav>
 $endif$
