--- a/tmpl/adelphi.html
+++ b/tmpl/adelphi.html
@@ -31,6 +31,8 @@ $if(date)$
 $endif$
   <title>$if(title-prefix)$$title-prefix$ - $endif$$if(pagetitle)$$pagetitle$$endif$</title>
 
+<link rel="shortcut icon" type="image/png" href="favicon.png">
+
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
