trying to fix broken link in footer

--- a/raw/team-dev.html
+++ b/raw/team-dev.html
@@ -155,8 +155,7 @@ http://edtech.adelphi.edu/
 
 <hr class="clear-all" />
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />
-    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
-    property="dct:title" rel="dct:type"><strong>Team-based development of educational technology</strong></span> was created by:
+    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type"><strong>Team-based development of educational technology</strong></span> was created by:
     <ul>
             <li><a xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName" rel="cc:attributionURL">Matthew X. Curinga</a></li>
             </ul>
@@ -164,7 +163,7 @@ http://edtech.adelphi.edu/
     Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/mcuringa/adelphi-ed-tech-courses" rel="dct:source">https://github.com/mcuringa/adelphi-ed-tech-courses</a>.
     You are encouraged to modify and teach this course under the terms of the license.
 
-<pre>Last modified: Monday, 08. October 2012 03:16PM</pre>
+<pre>Last modified: Monday, 08. October 2012 11:53PM</pre>
 
 <!-- Piwik -->
 <script type="text/javascript">
