--- a/tmpl/raw.html
+++ b/tmpl/raw.html
@@ -44,8 +44,7 @@ $endfor$
 
 <hr class="clear-all" />
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />
-    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
-    property="dct:title" rel="dct:type"><strong>$title$</strong></span> was created by:
+    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type"><strong>$title$</strong></span> was created by:
     <ul>
     $for(author)$
         <li><a xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName" rel="cc:attributionURL">$author$</a></li>
