--- a/raw/open-ed.html
+++ b/raw/open-ed.html
@@ -655,16 +655,17 @@ http://edtech.adelphi.edu/
 <p>All teacher education programs in New York State undergo periodic reviews by accreditation agencies and the state education department. For these purposes samples of students’ work are made available to those professionals conducting the review. Student anonymity is assured under these circumstances. If you do not wish to have your work made available for these purposes, please let the professor know before the start of the second class. Your cooperation is greatly appreciated.</p>
 
 <hr class="clear-all" />
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />
-    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type"><strong>Foundations of Open Education</strong></span> was created by:
+<p><strong>Foundations of Open Education</strong> was created by:</p>
     <ul>
             <li><a xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName" rel="cc:attributionURL">Matthew X. Curinga</a></li>
             </ul>
-    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.<br />
+    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+    <p>
     Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/mcuringa/adelphi-ed-tech-courses" rel="dct:source">https://github.com/mcuringa/adelphi-ed-tech-courses</a>.
     You are encouraged to modify and teach this course under the terms of the license.
+    </p>
 
-<pre>Last modified: Monday, 08. October 2012 11:56PM</pre>
+<pre>Last modified: Tuesday, 09. October 2012 08:46AM</pre>
 
 <!-- Piwik -->
 <script type="text/javascript">
