changes to web programming -- rearranging topics to focus more on web at the beginning

--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -19,23 +19,24 @@ http://edtech.adelphi.edu/
 <nav id="TOC">
 <h3>Course Outline</h3>
 <ul>
+<li><a href="#goals">Goals</a></li>
 <li><a href="#required-books">Required Books</a></li>
 <li><a href="#readings-bibliography">Readings &amp; Bibliography</a></li>
 <li><a href="#class-sessions">Class sessions</a><ul>
 <li><a href="#topography-of-interactive-websites">Topography of interactive websites</a></li>
 <li><a href="#web-development-toolkit">Web development toolkit</a></li>
+<li><a href="#displaying-dynamic-information">Displaying dynamic information</a></li>
+<li><a href="#styling-the-web-with-css">Styling the web with CSS</a></li>
+<li><a href="#interaction-with-javscript">Interaction with Javscript</a></li>
 <li><a href="#creating-and-reading-web-forms">Creating and reading web forms</a></li>
 <li><a href="#creating-and-saving-objects">Creating and saving objects</a></li>
 <li><a href="#mvc-pattern-and-templates">MVC pattern and templates</a></li>
 <li><a href="#interaction-design-for-learning">Interaction design for learning</a></li>
-<li><a href="#objects-in-django">Objects in django</a></li>
 <li><a href="#object-composition-mixins-inheritance">Object composition, &quot;mixins&quot;, &amp; inheritance</a></li>
 <li><a href="#effective-multimedia-learning">Effective multimedia learning</a></li>
-<li><a href="#rest-apis-connecting-to-flickr">REST APIs: connecting to flickr</a></li>
 <li><a href="#searching-database-objects">Searching database objects</a></li>
 <li><a href="#using-polymorphism">Using polymorphism</a></li>
 <li><a href="#errors-and-exceptions">Errors and exceptions</a></li>
-<li><a href="#project-work-session">Project work session</a></li>
 <li><a href="#final-project-presentations">Final project presentations</a></li>
 </ul></li>
 <li><a href="#grading-and-assignments">Grading and Assignments</a></li>
@@ -44,7 +45,11 @@ http://edtech.adelphi.edu/
 
 
 <article><p><strong>EDT 603 Programming web-based educational media</strong><br />Spring 2013 | Online</p>
+         <p><strong>Keywords:</strong> OOP, object oriented programming, python, software design, programming, computer science, educational technology, instructional design, html5, javascript, jquery, django, git, css</p>
          <p><strong>Description:</strong> In this course students learn techniques of web programming to develop interactive, educational media. Using the Python programming language and web development technologies (HTML5, Javascript, CSS), students gain practice in the object oriented programming and design of interactive software. For their final project, students will create their own educational website.</p>
+         <p><strong>Instructors:</strong><br />* <a href="http://matt.curinga.com">Matthew X. Curinga</a> * <a href="http://www.linkedin.com/pub/antonios-saravanos/34/315/436">Antonios A. Saravanos</a></p>
+         <div class="section level2" id="goals">
+         <h2><a href="#TOC">Goals</a></h2>
          <p>Specific teaching and learning goals include:</p>
          <ul>
          <li>designing web-based interactions and multimedia to support learning</li>
@@ -65,6 +70,7 @@ http://edtech.adelphi.edu/
          <li>Inheritance</li>
          <li>Polymorphism</li>
          </ul>
+         </div>
          <div class="section level2" id="required-books">
          <h2><a href="#TOC">Required Books</a></h2>
          <p>Hayward, J. (2011). <em>Django JavaScript Integration: AJAX and jQuery</em>. Packet Publishing. ISBN 1849510342</p>
@@ -91,6 +97,15 @@ http://edtech.adelphi.edu/
          <h3><a href="#TOC">Web development toolkit</a></h3>
          <p><em>Readings due: Hayword, ch 1; Anderson ch 2</em></p>
          </div>
+         <div class="section level3" id="displaying-dynamic-information">
+         <h3><a href="#TOC">Displaying dynamic information</a></h3>
+         </div>
+         <div class="section level3" id="styling-the-web-with-css">
+         <h3><a href="#TOC">Styling the web with CSS</a></h3>
+         </div>
+         <div class="section level3" id="interaction-with-javscript">
+         <h3><a href="#TOC">Interaction with Javscript</a></h3>
+         </div>
          <div class="section level3" id="creating-and-reading-web-forms">
          <h3><a href="#TOC">Creating and reading web forms</a></h3>
          <p><em>Readings due: Hayword, ch 3; Shneiderman (2000 &amp; 2002)</em></p>
@@ -107,9 +122,6 @@ http://edtech.adelphi.edu/
          <h3><a href="#TOC">Interaction design for learning</a></h3>
          <p><em>Readings due: Anderson, ch 4</em></p>
          </div>
-         <div class="section level3" id="objects-in-django">
-         <h3><a href="#TOC">Objects in django</a></h3>
-         </div>
          <div class="section level3" id="object-composition-mixins-inheritance">
          <h3><a href="#TOC">Object composition, &quot;mixins&quot;, &amp; inheritance</a></h3>
          <p><em>Readings due: Anderson, ch 7</em></p>
@@ -118,23 +130,16 @@ http://edtech.adelphi.edu/
          <h3><a href="#TOC">Effective multimedia learning</a></h3>
          <p><em>Readings due: Moreno (2006 &amp; 2007)</em></p>
          </div>
-         <div class="section level3" id="rest-apis-connecting-to-flickr">
-         <h3><a href="#TOC">REST APIs: connecting to flickr</a></h3>
-         <p><em>Readings due: Anderson, ch 9</em></p>
-         </div>
          <div class="section level3" id="searching-database-objects">
          <h3><a href="#TOC">Searching database objects</a></h3>
          <p><em>Readings due: Hayword, ch 8</em></p>
          </div>
          <div class="section level3" id="using-polymorphism">
          <h3><a href="#TOC">Using polymorphism</a></h3>
-         <p><em>Readings due: Anderson, ch 8</em></p>
+         <p><em>Readings due: Anderson, ch 8, 9</em></p>
          </div>
          <div class="section level3" id="errors-and-exceptions">
          <h3><a href="#TOC">Errors and exceptions</a></h3>
-         </div>
-         <div class="section level3" id="project-work-session">
-         <h3><a href="#TOC">Project work session</a></h3>
          </div>
          <div class="section level3" id="final-project-presentations">
          <h3><a href="#TOC">Final project presentations</a></h3>
@@ -174,7 +179,7 @@ http://edtech.adelphi.edu/
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<pre>Last modified: Tuesday, 23. October 2012 11:13AM</pre>
+<pre>Last modified: Tuesday, 23. October 2012 12:46PM</pre>
 
 <!-- Piwik -->
 <script type="text/javascript">
