changed templates to remove pre tag, better formatting in mobile browsers. rebuilt all output

--- a/raw/mlearning.html
+++ b/raw/mlearning.html
@@ -62,7 +62,7 @@ http://edtech.adelphi.edu/
          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
          // -->
          </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript><br /> <strong>Class:</strong> Harvey 104, Wed. 6:30-8:20 (every other week)<br /> <strong>Office hours:</strong> Post Annex 1, Mon 3-5pm, Tues, 2-4pm, Wed. by appointment (in person or online)<br /> <strong>Course website:</strong> <a href="http://mlearnau.tumblr.com">http://mlearnau.tumblr.com</a></p>
-         <div id="course-description">
+         <div class="section level2" id="course-description">
          <h2><a href="#TOC">Course description</a></h2>
          <p>Most of the world connects to the Internet from mobile phones. Android tablets and iPads are filtering into schools — and the hands of children. Students carry significant computing power in their pockets. This course considers how mobile computing forces us to reconsider the time and the place of learning.</p>
          <div class="img-right">
@@ -71,7 +71,7 @@ http://edtech.adelphi.edu/
          
          <p>As mobile networks become faster and more ubiquitous, devices more powerful, and the internet spreading to all corners of the world, mobile computing becomes one of the main channels for teaching and learning. Students will learn about mobile computing in schools, from 1:1 laptop programs to handheld computers. They will also look at how mobile computing supports learning outside of schools, both in K-12, higher ed, and informal settings.</p>
          </div>
-         <div id="goals-objectives">
+         <div class="section level2" id="goals-objectives">
          <h2><a href="#TOC">Goals &amp; objectives</a></h2>
          <p>Students taking this course will develop an understanding of the ways that mobile technologies can be used for teaching and learning. They will also consider the impact of mobile computing on the field of education as a whole.</p>
          <p>Students will:</p>
@@ -89,11 +89,11 @@ http://edtech.adelphi.edu/
          <li>reflect on how mobile computing challenges the traditional time and places of learning</li>
          </ul>
          </div>
-         <div id="how-to-use-tumblr-for-this-course">
+         <div class="section level2" id="how-to-use-tumblr-for-this-course">
          <h2><a href="#TOC">How to use Tumblr for this course</a></h2>
          <p>We are going to use the social blogging software/website <a href="http://www.tumblr.com">Tumblr</a> as our main course website this semester. Here are the basics of how we will use it:</p>
          <ul>
-         <li>assignments, writing prompts, and other useful information will be posted at <a href="http://mlearnau.tumblr.com">mLearn AU</a> ? the main course website</li>
+         <li>assignments, writing prompts, and other useful information will be posted at <a href="http://mlearnau.tumblr.com">mLearn AU</a> &amp;oumdash; the main course website</li>
          <li>each class member will have their own Tumblr
          <ul>
          <li>you do not have to use your own name or personally identifying information -- we will know who you are</li>
@@ -119,7 +119,7 @@ http://edtech.adelphi.edu/
          </ul></li>
          </ul>
          </div>
-         <div id="weekly-topics">
+         <div class="section level2" id="weekly-topics">
          <h2><a href="#TOC">Weekly topics</a></h2>
          <p><em>Readings, prompts for posts, and other assignments are available on the course website's post for the week.</em></p>
          <table>
@@ -275,7 +275,7 @@ http://edtech.adelphi.edu/
          <p><strong>RR = Reading Response due</strong></p>
          <p><strong>Note:</strong> for topics where it says <strong>mLearning in domains</strong>, students will pursue their own self-study of how mLearning is implemented in certain domains of learning. For these weeks, you will choose your own readings (3-5 papers, about 50 pages total) and then write a reading response to those readings. You are encouraged to form study groups for these weeks, but are not required to. For example, on week 10, you may write about mobile learning and TESOL. On week 14, you might focus on mobile learning and Math.</p>
          </div>
-         <div id="assignments-grading">
+         <div class="section level2" id="assignments-grading">
          <h2><a href="#TOC">Assignments &amp; grading</a></h2>
          <table>
          <thead>
@@ -333,7 +333,7 @@ http://edtech.adelphi.edu/
          </tr>
          </tbody>
          </table>
-         <div id="reading-responses">
+         <div class="section level3" id="reading-responses">
          <h3><a href="#TOC">Reading Responses</a></h3>
          <p>Almost every week, you will be asked to post a <em>reading response</em> on your Tumblr. This is the main online interaction for this blended course, and will happen most weeks — regardless of whether we are schedule to meet in person or not. Your reading response should be approximately 300-500 words, but occasionally may call for more or less.</p>
          <p>A good reading response:</p>
@@ -349,7 +349,7 @@ http://edtech.adelphi.edu/
          <p>In addition to your own response, you should check Tumblr and Disqus every day. You are required to comment on at least two of your peer's responses each week. Usually you will want to respond to people who engage with you.</p>
          <p>There are a total of 11 possible response. 10 of them will be graded (you get one free pass). You will get either 1 point or 0 points, no partial credit. Late responses will be accepted (but highly discouraged) up until Wed. Chronic late responses will bring down your grade on your professionalism rubric.</p>
          </div>
-         <div id="professionalism-rubric">
+         <div class="section level3" id="professionalism-rubric">
          <h3><a href="#TOC">Professionalism rubric</a></h3>
          <p>At the end of the semester, you will fill out a self-evaluation of your professional conduct in the class. You will be asked to reflect on:</p>
          <ul>
@@ -361,11 +361,11 @@ http://edtech.adelphi.edu/
          <li>promptness of course materials</li>
          </ul>
          </div>
-         <div id="where-im-from">
+         <div class="section level3" id="where-im-from">
          <h3><a href="#TOC">Where I'm from</a></h3>
          <p>Using your own mobile device, create a <em>multimedia poem</em>, &quot;Where I'm from&quot;. The poem will consist of the text and at least 5 images that you record with your phone (or tablet).</p>
          </div>
-         <div id="tech-report">
+         <div class="section level3" id="tech-report">
          <h3><a href="#TOC">Tech Report</a></h3>
          <p>Working in groups, students will present a &quot;Tech Report&quot;, on an aspect of mobile technology. Groups will prepare a 10-12 minute presentation, followed by questions. They will also post an annotated list of resources (websites, press, and scholarly articles) related to their topic. Annotations should only be a few sentences.</p>
          <p>Example topics:</p>
@@ -381,7 +381,7 @@ http://edtech.adelphi.edu/
          <li>mobile computing and assistive technology</li>
          </ul>
          </div>
-         <div id="mobile-video-interview">
+         <div class="section level3" id="mobile-video-interview">
          <h3><a href="#TOC">Mobile Video Interview</a></h3>
          <p>Video-capable phones and tablets have made it very easy to record video. For this assignment you are going to shoot a 5 minute video (keep it within 30 seconds of 5 min). In the video you will interview somebody (at least one person, more than one if you choose to go that way). The <strong>theme</strong> for the interview is: <em>The effect of mobile computing on our society.</em> You should write your interview questions before hand, but also feel free to improvise during the interview. Some interviewers edit out their own voice and questions (more of a documentary style), others leave them in (more conversational). This is entirely up to you. While you are encouraged to work with other students on the this project, everyone must upload their own interview.</p>
          <p>Videos will be evaluated on the following scale:</p>
@@ -392,7 +392,7 @@ http://edtech.adelphi.edu/
          <li>2 points, production: could you hear the audio? was there enough light to say what was going on? was the camera steady, if meant to be steady? shaky if meant to be shaky? did you keep the subject in the frame? we're not looking for an award winning film, but something that doesn't make us strain or feel queasy.</li>
          </ul>
          </div>
-         <div id="mid-term-essays">
+         <div class="section level3" id="mid-term-essays">
          <h3><a href="#TOC">Mid-term essays</a></h3>
          <p>The instructor will post 3 essay questions related to mlearning on the course website. You will have two weeks to prepare your response (Wed. to Wed.). Choose two of the three essays to answer. Post two 500-800 word responses on your Tumblr. Your response should follow the standards of academic writing, referencing scholarly work and other sources to support your thesis. Please carefully proof your response before posting. Since you are writing for the web, you are encouraged to include relevant hyperlinks as well as image or other media that support your thesis. You can either use endnotes or APA formatted references for citations -- the goal is that all references are clearly indicated and can be verified by a reader.</p>
          <p>Example of an essay question:</p>
@@ -400,7 +400,7 @@ http://edtech.adelphi.edu/
          <p>Some people view mobile learning as a &quot;light&quot; form of elearning or online learning: learners use the same methods and forms as other online learning, albeit the more constrained computing and physical affordances of mobile computers. Others, though, argue that the greater potential of mlearning is to rethink how and when we learn. Compare traditional elearning/online learning to mobile learning. Consider what elements are unique to each model, and discuss the potential learning benefits of each.</p>
          </blockquote>
          </div>
-         <div id="podcasts">
+         <div class="section level3" id="podcasts">
          <h3><a href="#TOC">Podcasts</a></h3>
          <p>Podcasts show up in much of the recent literature on mobile learning as an easy way for teachers to communicate to their students and families and as a way for learners to express their ideas. During this semester, you will create 2 podcasts — an audio recording that you upload to your tumblr. The podcasts are due for sessions 10 &amp; 12, the weeks where you will research mobile learning within a specific topic of interest to you. If you choose to work as part of a team (which is encouraged but not required) on these topics, you can submit a group podcast (where everyone in the group speaks). Group podcasts will receive the same grade, one grade for the group. Alternatively, you can work individually, or work as part of a team, but upload individual podcasts.</p>
          <p>Your podcast must be between 8-10 minutes in length. You can, but are not required to record it on a mobile device. I usually use a laptop computer, USB headset, and <a href="http://audacity.sourceforge.net/">Audacity</a> for my audio recordings. The target audience for this podcast is members of our class. You should assume a base understanding of both mobile technology and mobile learning. Do not assume, though, more than a general understanding of your topic (if it is specialized). It is strongly advised that you write a script and practice before creating you final recording.</p>
@@ -414,7 +414,7 @@ http://edtech.adelphi.edu/
          </ul>
          <p><em>You will lose 2 points for not uploading your podcasts on time.</em> You will receive zero points for this assignment if it's more than 1 day late.</p>
          </div>
-         <div id="educational-app-review">
+         <div class="section level3" id="educational-app-review">
          <h3><a href="#TOC">Educational App Review</a></h3>
          <p>&quot;Apps&quot;, downloadable applications that run locally on a phone or tablet, you will write a review of a mobile app, from an educational perspective. Your review should be 500-800 words long. It should include the following elements:</p>
          <ol start="0" style="list-style-type: decimal">
@@ -447,7 +447,7 @@ http://edtech.adelphi.edu/
          </ol>
          <p>Use the tag <a href="http://tumblr.com/tagged/app-review">#app-review</a></p>
          </div>
-         <div id="final-project">
+         <div class="section level3" id="final-project">
          <h3><a href="#TOC">Final project</a></h3>
          <p><em>Choose one type of project as your final project. Projects can be completed individually or in teams.</em></p>
          <p><strong>Mobile learning unit</strong></p>
@@ -491,7 +491,7 @@ http://edtech.adelphi.edu/
          <p>If you would like to work with students using mobile devices, please discuss your project idea with the instructor. There may be some schools in Brooklyn and/or Long Island we can work with, either during the school day or after school. You could possible teach a lesson and write up a report (or create a video portfolio) or do a series of observations, etc.</p>
          </div>
          </div>
-         <div id="course-readings-bibliography">
+         <div class="section level2" id="course-readings-bibliography">
          <h2><a href="#TOC">Course Readings &amp; Bibliography</a></h2>
          <p>Ally, M. (Ed.). (2009). <a href="http://www.aupress.ca/index.php/books/120155" title="open access ebook"><em>Mobile learning transforming the delivery of education and training</em></a>. Edmonton: AU Press. ISBN 978-1-897425-44-2</p>
          <p>Apple, Inc. (2012). <a href="http://developer.apple.com/library/ios/#documentation/UserExperience/Conceptual/MobileHIG/Introduction/Introduction.html">iOS Human Interface Guidelines: Introduction</a>.</p>
@@ -564,7 +564,19 @@ http://edtech.adelphi.edu/
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<pre>Last modified: Wednesday, 10. October 2012 03:22PM</pre>
+<tt>Last modified: Wednesday, 07. November 2012 10:17AM</tt>
 
+<!-- Piwik -->
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try {
+    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+    piwikTracker.trackPageView();
+    piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Tracking Code -->
 
 </footer>
