--- a/raw/video-games.html
+++ b/raw/video-games.html
@@ -19,6 +19,7 @@ http://edtech.adelphi.edu/
 <nav id="TOC">
 <h3>Course Outline</h3>
 <ul>
+<li><a href="#description">Description</a></li>
 <li><a href="#who-should-take-this-course">Who should take this course</a></li>
 <li><a href="#goals">Goals</a></li>
 <li><a href="#using-this-syllabus">Using this syllabus</a></li>
@@ -131,7 +132,11 @@ http://edtech.adelphi.edu/
          h='&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;';e=n+a+h;
          document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
          // -->
-         </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript><br /> ## Description Video games have become an increasingly important source of culture and entertainment in our society. They are more popular than Hollywood movies, yet receive a fraction of the attention, especially in academia. In recent years, this has been changing, as scholars have begun to interrogate games from many levels: design, critique, and as a means of learning. In this course, we really have 3 separate, but overlapping goals: 1) to understand video games as a social and cultural phenomenon, especially important to youth culture; 2) to think of ways to teach <em>about</em> video games, as part of a (digital) literacy perspective; and 3) to investigate ways to teach <em>with</em> games, both off the shelf and ones that we design ourselves.</p>
+         </script><noscript>&#x6d;&#x63;&#x75;&#114;&#x69;&#110;&#x67;&#x61;&#32;&#x61;&#116;&#32;&#x61;&#100;&#x65;&#108;&#112;&#104;&#x69;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript></p>
+         <div class="section level2" id="description">
+         <h2><a href="#TOC">Description</a></h2>
+         <p>Video games have become an increasingly important source of culture and entertainment in our society. They are more popular than Hollywood movies, yet receive a fraction of the attention, especially in academia. In recent years, this has been changing, as scholars have begun to interrogate games from many levels: design, critique, and as a means of learning. In this course, we really have 3 separate, but overlapping goals: 1) to understand video games as a social and cultural phenomenon, especially important to youth culture; 2) to think of ways to teach <em>about</em> video games, as part of a (digital) literacy perspective; and 3) to investigate ways to teach <em>with</em> games, both off the shelf and ones that we design ourselves.</p>
+         </div>
          <div class="section level2" id="who-should-take-this-course">
          <h2><a href="#TOC">Who should take this course</a></h2>
          <p>This course is open to anyone who is interested in how people learn from video games. We will look at games from various perspectives: cognitive, social, ethical, design, pragmatic, etc. You do not need specific technical experience in developing games and you do not need to be a &quot;gamer&quot; to join us.</p>
@@ -676,7 +681,7 @@ http://edtech.adelphi.edu/
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<pre>Last modified: Thursday, 25. October 2012 03:07PM</pre>
+<tt>Last modified: Wednesday, 07. November 2012 10:17AM</tt>
 
 <!-- Piwik -->
 <script type="text/javascript">
