--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -179,7 +179,7 @@ http://edtech.adelphi.edu/
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<pre>Last modified: Tuesday, 23. October 2012 12:46PM</pre>
+<tt>Last modified: Wednesday, 07. November 2012 10:17AM</tt>
 
 <!-- Piwik -->
 <script type="text/javascript">
