--- a/tmpl/raw.html
+++ b/tmpl/raw.html
@@ -56,7 +56,7 @@ $endfor$
     </p>
 
 $if(date)$
-<pre>Last modified: $date$</pre>
+<tt>Last modified: $date$</tt>
 $endif$
 
 $for(include-after)$
