--- a/raw/open-ed.html
+++ b/raw/open-ed.html
@@ -65,10 +65,10 @@ http://edtech.adelphi.edu/
 <li><a href="#readings-due-9">Readings due:</a></li>
 <li><a href="#optional-readings-1">Optional readings:</a></li>
 </ul></li>
+<li><a href="#open-education-project-report">Open Education Project Report</a></li>
 <li><a href="#moocs-massively-open-online-courses">MOOCs: Massively Open Online Courses</a><ul>
 <li><a href="#readings-due-10">Readings due:</a></li>
 </ul></li>
-<li><a href="#open-education-project-report">Open Education Project Report</a></li>
 <li><a href="#resisting-open-education">Resisting Open Education</a><ul>
 <li><a href="#readings-due-11">Readings due:</a></li>
 </ul></li>
@@ -257,28 +257,28 @@ http://edtech.adelphi.edu/
          <td align="left">Open Education Resources</td>
          </tr>
          <tr class="even">
-         <td align="left">10</td>
+         <td align="left">-</td>
          <td align="left">Oct 31</td>
-         <td align="left">synchronous</td>
-         <td align="left">The Commons</td>
+         <td align="left">canceled</td>
+         <td align="left"><del>The Commons</del></td>
          </tr>
          <tr class="odd">
-         <td align="left">11</td>
+         <td align="left">10</td>
          <td align="left">Nov 7</td>
-         <td align="left">asynchronous</td>
-         <td align="left">MOOCs: Massively Open Online Courses</td>
+         <td align="left"><strong>asynchronous</strong></td>
+         <td align="left">The Commons</td>
          </tr>
          <tr class="even">
-         <td align="left">12</td>
+         <td align="left">11</td>
          <td align="left">Nov 14</td>
          <td align="left">synchronous</td>
          <td align="left">Open Education Reports</td>
          </tr>
          <tr class="odd">
-         <td align="left">-</td>
+         <td align="left">12</td>
          <td align="left">Nov 21</td>
-         <td align="left">No Class</td>
-         <td align="left">-</td>
+         <td align="left">asynchronous</td>
+         <td align="left">MOOCs: Massively Open Online Courses</td>
          </tr>
          <tr class="even">
          <td align="left">13</td>
@@ -458,6 +458,10 @@ http://edtech.adelphi.edu/
          <p>Ostrom, E. (1999). <a href="http://www.soc.duke.edu/~pmorgan/ostrom.AR.html">Coping with tragedies of the commons</a>. <em>Annual review of political science</em>, <em>2</em>(1), 493–535.</p>
          </div>
          </div>
+         <div class="section level3" id="open-education-project-report">
+         <h3><a href="#TOC">Open Education Project Report</a></h3>
+         <p>There are no assigned readings this week.</p>
+         </div>
          <div class="section level3" id="moocs-massively-open-online-courses">
          <h3><a href="#TOC">MOOCs: Massively Open Online Courses</a></h3>
          <div class="section level4" id="readings-due-10">
@@ -466,10 +470,6 @@ http://edtech.adelphi.edu/
          <p>Norvig, P. (2012). <a href="http://www.ted.com/talks/peter_norvig_the_100_000_student_classroom.html">The 100,000-student classroom</a> [video 06:12]. TED2012.</p>
          <p>Peters, M. A. (2011). Algorithmic capitalism and educational futures. In M. A. Peters &amp; E. Bulut (Eds.), <em>Cognitive capitalism, education, and digital labor</em> (pp. 245–258). New York: Peter Lang.</p>
          </div>
-         </div>
-         <div class="section level3" id="open-education-project-report">
-         <h3><a href="#TOC">Open Education Project Report</a></h3>
-         <p>There are no assigned readings this week.</p>
          </div>
          <div class="section level3" id="resisting-open-education">
          <h3><a href="#TOC">Resisting Open Education</a></h3>
@@ -681,7 +681,7 @@ http://edtech.adelphi.edu/
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<pre>Last modified: Wednesday, 24. October 2012 01:30PM</pre>
+<tt>Last modified: Wednesday, 07. November 2012 10:17AM</tt>
 
 <!-- Piwik -->
 <script type="text/javascript">
