minor changes to templates, rebuilt all courses

--- a/raw/video-games.html
+++ b/raw/video-games.html
@@ -681,7 +681,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<tt>Last modified: Wednesday, 14. November 2012 11:30PM</tt>
+<p><tt>Last modified: Tuesday, 20. November 2012 05:26PM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
