--- a/tmpl/adelphi.html
+++ b/tmpl/adelphi.html
@@ -107,7 +107,7 @@ $body$
     Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/mcuringa/adelphi-ed-tech-courses" rel="dct:source">https://github.com/mcuringa/adelphi-ed-tech-courses</a>.
 
 $if(date)$
-<tt>Last modified: $date$</tt>
+<p><tt>Last modified: $date$</tt></p>
 $endif$
 
 $for(include-after)$
