--- a/tmpl/raw.html
+++ b/tmpl/raw.html
@@ -56,7 +56,7 @@ $endfor$
     </p>
 
 $if(date)$
-<tt>Last modified: $date$</tt>
+<p><tt>Last modified: $date$</tt></p>
 $endif$
 
 $for(include-after)$
