--- a/raw/open-ed.html
+++ b/raw/open-ed.html
@@ -81,7 +81,7 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#participation">Participation</a></li>
 <li><a href="#personal-learning-plan">Personal Learning Plan</a></li>
 <li><a href="#session-leader">Session leader</a></li>
-<li><a href="#critical-essay">Critical Essay</a></li>
+<li><a href="#critical-essay-choose-an-area-of-interest-that-has-arisen-out-of">Critical Essay Choose an area of interest that has arisen out of</a></li>
 </ul></li>
 <li><a href="#open-education-projects">Open Education Projects</a></li>
 </ul>
@@ -285,7 +285,7 @@ http://education.adelphi.edu/ed-tech
          <tr class="even">
          <td align="left">13</td>
          <td align="left">Nov 28</td>
-         <td align="left">asynchronous</td>
+         <td align="left">synchronous</td>
          <td align="left">Resisting Open Education</td>
          </tr>
          <tr class="odd">
@@ -526,17 +526,17 @@ http://education.adelphi.edu/ed-tech
          </tr>
          <tr class="even">
          <td align="left">Critical Essay (draft)</td>
-         <td align="left">11/21</td>
+         <td align="left">12/5</td>
          <td align="left">ungraded</td>
          </tr>
          <tr class="odd">
          <td align="left">Critical Essay (comments)</td>
-         <td align="left">11/28</td>
+         <td align="left">12/12</td>
          <td align="left">ungraded</td>
          </tr>
          <tr class="even">
          <td align="left">Critical Essay (final)</td>
-         <td align="left">12/12</td>
+         <td align="left">12/19</td>
          <td align="left">30%</td>
          </tr>
          </tbody>
@@ -591,13 +591,13 @@ http://education.adelphi.edu/ed-tech
          </ol>
          <p>Your grade in this area will be a combination of self-, instructor-, and peer-evaluations.</p>
          </div>
-         <div class="section level3" id="critical-essay">
-         <h3><a href="#TOC">Critical Essay</a></h3>
-         <p>Choose an area of interest that has arisen out of the course readings and discussions and write a reflective essay on this topic. Follow <a href="http://www.studyplace.org/wiki/Notes_on_the_critical-interpretive_essay">Chris Higgins' Notes on the critical-interpretive essay</a> for the structure of this essay, which should be: <em>focused</em>, <em>interesting</em>, <em>motivated</em>, and <em>controversial</em>. The chapters in <em>Cognitive Capitalism, Education, and Digital Labor</em> are typical of writing in this style. You should refer closely to the texts that we engage with during the semester in your writing. Your work must properly cite your sources. Since we will be compiling our essays together, you should use APA style. You may include endnotes in your essay as well</p>
+         <div class="section level3" id="critical-essay-choose-an-area-of-interest-that-has-arisen-out-of">
+         <h3><a href="#TOC">Critical Essay Choose an area of interest that has arisen out of</a></h3>
+         <p>the course readings and discussions and write a reflective essay on this topic. Follow <a href="http://www.studyplace.org/wiki/Notes_on_the_critical-interpreti%20ve_essay">Chris Higgins' Notes on the critical-interpretive essay</a> for the structure of this essay, which should be: <em>focused</em> , <em>interesting</em>, <em>motivated</em>, and <em>controversial</em>. The chapters in <em>Cognitive Capitalism, Education, and Digital Labor</em> are typical of writing in this style. You should refer closely to the texts that we engage with during the semester in your writing. Your work must properly cite your sources. Since we will be compiling our essays together, you should use APA style. You may include endnotes in your essay as well</p>
          <p>Essays must be approximately 5,000 words long (about 10 pages). They will be posted online for discussion in our last week of the semester. This is strictly an individual assignment (one essay per person). You should work with your study group to draft and improve your essay. I strongly suggest that everyone schedule an appointment with the <a href="http://students.adelphi.edu/writingcenter/">Writing Center</a> before you turn in your draft, and then again before you turn in your final essay.</p>
-         <p>You post a <strong>draft of your essay</strong> on 11/21. Post your essay on Google Docs and share the link with the class (and your editor) on Moodle. You will be assigned another classmate as the editor for your work. This person will be outside of your study group, to give you a different perspective. You are encouraged to also solicit comments from your study group. <strong>Comments on the draft you are editing are due on 11/28.</strong></p>
-         <p><strong>Your final essay is due on 12/12.</strong> Late work will not be accepted for this assignment and there will not be an opportunity to re-write your final draft. Avail yourself to the resources in your personal learning network to ensure that you turn in high quality work.</p>
-         <p>The final essays will be <strong>collected into an e-book and website</strong> and published using a Creative Commons license on the Educational Technology program website as our contribution to the study of Open Education.</p>
+         <p>You must bring a <strong>draft of your essay</strong> on 12/5. You will be assigned another classmate as the editor for your work. This person will be outside of your study group, to give you a different perspective. You are encouraged to also solicit comments from your study group. <strong>Comments from your peer editor are due on 12/12.</strong></p>
+         <p><strong>Your final essay is due on 12/19.</strong> Late work will not be accepted for this assignment and there will not be an opportunity to re-write your final draft. Avail yourself to the resources in your personal learning network to ensure that you turn in high quality work.</p>
+         <p>The final essays will be <strong>collected into an e-book</strong> and published using a Creative Commons license on the Educational Technology program website as our contribution to the study of Open Education.</p>
          <p>Your grade for the final paper will be based on the jouranl article evaluation process from the <em><a href="http://peerproduction.net/">Journal of Peer Production</a></em></p>
          <p>Their reviewers consider:</p>
          <ol style="list-style-type: decimal">
@@ -658,7 +658,7 @@ http://education.adelphi.edu/ed-tech
          </ul></li>
          </ul>
          <p><strong>Find your own:</strong></p>
-         <p><em>Here are some lists of Open Ed projects</em>.</p>
+         <p><em>Here are some other lists of Open Ed projects</em>.</p>
          <ul>
          <li><a href="http://www.oercommons.org/">OER Commons</a></li>
          <li><a href="http://www.ocwconsortium.org/">Open Courseware Consortium</a></li>
@@ -691,7 +691,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Tuesday, 20. November 2012 08:10PM</tt></p>
+<p><tt>Last modified: Tuesday, 27. November 2012 11:16AM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
