--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -22,8 +22,8 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#goals-and-objectives">Goals and Objectives</a></li>
 <li><a href="#course-texts">Course Texts</a></li>
 <li><a href="#readings">Readings</a></li>
-<li><a href="#class-sessions">Class Sessions</a><ul>
 <li><a href="#schedule">Schedule</a></li>
+<li><a href="#class-sessions">Class Sessions</a><ul>
 <li><a href="#topography-of-interactive-websites">Topography of interactive websites</a></li>
 <li><a href="#web-development">Web development</a></li>
 <li><a href="#html-css-javascript">HTML, CSS, &amp; Javascript</a></li>
@@ -79,13 +79,63 @@ http://education.adelphi.edu/ed-tech
          <p>Teague, Jason. 2011. <em>CSS3: Visual QuickStart Guide.</em> Peachpit Press. Berkeley CA. ISBN 9780321719638.</p>
          <p>Zelle, John. 2004. <em>Python programming: an introduction to computer science.</em>Franklin Beedle. Wilsonville, OR. ISBN 9781887902991.</p>
          </div>
+         <div class="section level2" id="schedule">
+         <h2><a href="#TOC">Schedule</a></h2>
+         <p><em>This online course runs according to Adelphi's Cycle 3.</em> <em>Classes will be on a Sunday-to-Sunday schedule. Students work at their own pace through the course materials, but must attend at least 4 synchronous labs (either online or in person) during the class.</em></p>
+         <table>
+         <thead>
+         <tr class="header">
+         <th align="left">Session</th>
+         <th align="left">Week of</th>
+         <th align="left">Due</th>
+         </tr>
+         </thead>
+         <tbody>
+         <tr class="odd">
+         <td align="left">1</td>
+         <td align="left">Jan 27</td>
+         <td align="left">A running virtual server with a basic web page</td>
+         </tr>
+         <tr class="even">
+         <td align="left">2</td>
+         <td align="left">Feb 03</td>
+         <td align="left">A single-page website</td>
+         </tr>
+         <tr class="odd">
+         <td align="left">3</td>
+         <td align="left">Feb 10</td>
+         <td align="left">A dynamic website with Django templates</td>
+         </tr>
+         <tr class="even">
+         <td align="left">4</td>
+         <td align="left">Feb 17</td>
+         <td align="left">Text Analysis</td>
+         </tr>
+         <tr class="odd">
+         <td align="left">5</td>
+         <td align="left">Feb 24</td>
+         <td align="left">Final Project Ideas</td>
+         </tr>
+         <tr class="even">
+         <td align="left">6</td>
+         <td align="left">Mar 03</td>
+         <td align="left">Object Model</td>
+         </tr>
+         <tr class="odd">
+         <td align="left">7</td>
+         <td align="left">Mar 10</td>
+         <td align="left">Project Forms</td>
+         </tr>
+         <tr class="even">
+         <td align="left">8</td>
+         <td align="left">Mar 17</td>
+         <td align="left">Final Project</td>
+         </tr>
+         </tbody>
+         </table>
+         </div>
          <div class="section level2" id="class-sessions">
          <h2><a href="#TOC">Class Sessions</a></h2>
-         <div class="section level3" id="schedule">
-         <h3><a href="#TOC">Schedule</a></h3>
-         <p><em>This online course runs according to Adelphi's Cycle 3.</em> <em>Classes will be on a Sunday-to-Sunday schedule. Students work at their own pace through the course materials, but must attend at least 4 synchronous labs (either online or in person) during the class.</em></p>
-         <p>Session Week of Due 1 Jan 27 A running virtual server with a basic web page 2 Feb 03 A single-page website 3 Feb 10 A dynamic website with Django templates 4 Feb 17 Text Analysis 5 Feb 24 Final Project Ideas 6 Mar 03 Object Model 7 Mar 10 Project Forms 8 Mar 17 Final Project</p>
-         </div>
          <div class="section level3" id="topography-of-interactive-websites">
          <h3><a href="#TOC">Topography of interactive websites</a></h3>
          </div>
@@ -189,7 +239,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Monday, 03. December 2012 09:15AM</tt></p>
+<p><tt>Last modified: Monday, 03. December 2012 11:37AM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
